done with update & export function

--- a/WebContent/resources/css/mystyle1.css
+++ b/WebContent/resources/css/mystyle1.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ececec;
+    background-color: #e6dfcc;
 }
  
 /** Set the backgrounds for the different sections **/
