--- a/WebContent/resources/css/mystyle1.css
+++ b/WebContent/resources/css/mystyle1.css
@@ -1,110 +1,197 @@
 body {
-    background-color: #e6dfcc;
+	background-color: #fffef2;
 }
- 
+
 /** Set the backgrounds for the different sections **/
 .header-area {
-    background-color: #2d465c;
-    min-height: 60px;
+	background-color: #2d465c;
+	min-height: 60px;
 }
- 
+
 .navigation-area {
 	background-color: none;
 	background-repeat: repeat-x;
 }
- 
+
 .content-area {
-    padding: 50px 0 70px 0;
+	padding: 50px 0 70px 0;
 }
- 
+
 .footer-area {
-    background-color: #484848;  
-    color: #fff;
-    min-height: 80px;
-    padding: 20px 0 0 0;
+	background-color: #484848;
+	color: #fff;
+	min-height: 80px;
+	padding: 20px 0 0 0;
 }
- 
+
 .full-width {
-    min-width:100%;
-    position: relative;
+	min-width: 100%;
+	position: relative;
 }
- 
+
 h2 {
-    color: #fff;
-    font-weight: normal;
-    margin-top: 50px;
+	color: #fff;
+	font-weight: normal;
+	margin-top: 50px;
 }
 
 /** Changes background color, height and margin of the border **/
 .top-bar {
-    background: none;
-    height: 48px;
-    line-height: 58px;
-    margin-bottom: 0;
+	background: none;
+	height: 48px;
+	line-height: 58px;
+	margin-bottom: 0;
 }
 
-.top-bar-section li a:not(.button) {
-    background: none !important; 
-    color:   white;
-    line-height: 58px;
+.top-bar-section
+
+ 
+
+li
+
+ 
+
+a
+
+
+:not
+
+ 
+
+(
+.button
+
+ 
+
+)
+{
+background
+
+
+:
+
+ 
+
+none
+
+ 
+
+!
+important
+
+
+;
+color
+
+
+:
+
+ 
+
+white
+
+
+;
+line-height
+
+
+:
+
+ 
+
+58
+px
+
+
+;
 }
 
 /** Changes background color of in-active top-bar section hover **/
-.top-bar-section li a:not(.button):hover {
-    background: #2d465c !important; 
+.top-bar-section li a:not (.button ):hover {
+	background: #2d465c !important;
 }
 
-.top-bar-section ul li.active > a {
-    background: #f55e00!important;   
-    
+.top-bar-section ul li.active>a {
+	background: #f55e00 !important;
 }
 
-.top-bar-section ul li.active > a:hover {
-    background: #2d465c !important;   
+.top-bar-section ul li.active>a:hover {
+	background: #2d465c !important;
 }
 
 /** This fixes the position and the color of the dropdown arrow **/
-.top-bar-section .has-dropdown > a:after {
-    border-color: rgba(0, 0, 0, 1) transparent transparent;
-    margin-top: 2.5px;
+.top-bar-section .has-dropdown>a:after {
+	border-color: rgba(0, 0, 0, 1) transparent transparent;
+	margin-top: 2.5px;
 }
 
 /** IMPORTANT fill for the ul dropdown container **/
 .top-bar-section ul.dropdown {
-    background: green !important;
-    color:   #484848;
+	background: green !important;
+	color: #484848;
+}
+
+fieldset {
+	border: 1px solid #484848;
+	background-color: none;
+}
+
+fieldset legend {
+	background: none;
+	font-size: 16px;
+}
+
+.breadcrumbs {
+	background: none;
+	border: none;
+}
+
+.top-nav {
+	background: none;
+	padding-top: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-bottom: 0px;
+}
+
+canvas {
+	width: 100% !important;
+	max-width: 600px;
+	height: auto !important;
+	padding-left: 0; padding-right : 0; margin-left : auto; margin-right :
+	auto;
+	display: block;
+	padding-right: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media only screen and (max-width: 640px) {
- 
-    /* Makes the responsive menu fit in the navigation container and change its background to black */
-    
-    .top-bar ul {
-    	background-color: rgba(0, 0, 0, 0.5);
-        padding-bottom: 13px;
-    }
- 
-    /* Change non active menu item color to black */
-    .top-bar-section ul li > a {
-        color: #fff;
-    }
- 
-    /* Gives the dropdown ul a black fill */
-    .top-bar-section ul {
-        background: #000;
-    }
- 
-    /* Give the BACK button after going in a submenu the appropriate filling */
-    .top-bar-section .dropdown li.title h5 a {
-    	background: #000;
-        line-height: 40px;
-    }
- 
-    /* This fixes the position and the color of the dropdown arrow */
-    .top-bar-section .has-dropdown > a:after {
-        border-color: rgba(255, 255, 255, 1) transparent transparent;
-        margin-top: 2.5px;
-    }
- 
-} /* end media query */
+	/* Makes the responsive menu fit in the navigation container and change its background to black */
+	.top-bar ul {
+		background-color: rgba(0, 0, 0, 0.5);
+		padding-bottom: 13px;
+	}
 
+	/* Change non active menu item color to black */
+	.top-bar-section ul li>a {
+		color: #fff;
+	}
+
+	/* Gives the dropdown ul a black fill */
+	.top-bar-section ul {
+		background: #000;
+	}
+
+	/* Give the BACK button after going in a submenu the appropriate filling */
+	.top-bar-section .dropdown li.title h5 a {
+		background: #000;
+		line-height: 40px;
+	}
+
+	/* This fixes the position and the color of the dropdown arrow */
+	.top-bar-section .has-dropdown>a:after {
+		border-color: rgba(255, 255, 255, 1) transparent transparent;
+		margin-top: 2.5px;
+	}
+} /* end media query */
